<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/profile_layout_height"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/profile_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/md_black_text"
                    android:text="@string/profile_years"
                    android:textSize="@dimen/profile_text_size" />

                <TextView
                    android:id="@+id/profile_years_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/md_black_text"
                    android:gravity="center"
                    android:textSize="@dimen/profile_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:textColor="@color/md_black_text"
                    android:text="@string/profile_sex"
                    android:textSize="@dimen/profile_text_size" />

                <TextView
                    android:id="@+id/profile_sex_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/md_black_text"
                    android:gravity="center"
                    android:textSize="@dimen/profile_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:textColor="@color/md_black_text"
                    android:text="@string/profile_location"
                    android:textSize="@dimen/profile_text_size" />

                <TextView
                    android:id="@+id/profile_location_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/md_black_text"
                    android:gravity="center"
                    android:textSize="@dimen/profile_text_size" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>