<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.echo.view.MainActivity"
    tools:showIn="@layout/main_activity_layout">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/option_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/windowBackground"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_homo_sexual_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textColor="@color/md_white_text"
                    android:background="@color/colorAccent"
                    android:tag="unclicked"
                    android:text="@string/send_homo_sexual"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/send_near_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textColor="@color/md_white_text"
                    android:background="@color/colorAccent"
                    android:tag="unclicked"
                    android:text="@string/send_near_years"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/send_near_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textColor="@color/md_white_text"
                    android:background="@color/colorAccent"
                    android:tag="unclicked"
                    android:text="@string/send_near_location"
                    android:textAlignment="center" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/record_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/option_cardview"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/windowBackground"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/record_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/play_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        app:srcCompat="@drawable/play_64px_blue400" />

                    <ImageView
                        android:id="@+id/record_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/recording_64px_red400" />
                </LinearLayout>

                <com.gc.materialdesign.views.ProgressBarDeterminate
                    android:id="@+id/record_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/md_blue_A400"
                    app:max="10"
                    app:min="0" />

                <TextView
                    android:id="@+id/record_progress_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="ProgressText"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <com.dd.processbutton.FlatButton
                    android:id="@+id/send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="전송하기"
                    android:textColor="@color/windowBackground"
                    app:pb_colorNormal="@color/colorPrimary"
                    app:pb_colorPressed="@color/colorPrimaryDark" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>


</RelativeLayout>
